fix dir up button on mobile

--- a/app/screens/Videos/styles.scss
+++ b/app/screens/Videos/styles.scss
@@ -219,6 +219,17 @@
   .videos-container {
     .list {
       flex: 3;
+
+      .list-body {
+        .up-dir-button {
+          bottom: 40px;
+          padding: 30px 30px 35px 30px;
+        }
+      }
+
+      .filelist {
+        padding-bottom: 140px;
+      }
     }
 
     .videoplayer-wrapper {
